--- a/static/css/hello.css
+++ b/static/css/hello.css
@@ -6,3 +6,20 @@ html, body {
 #map {
   height: 100%;
 }
+
+.hover {position: relative;}
+.content {background-color: #F5F5F5;width: 250px; border-radius: 4px;position: absolute; bottom: 20px; left: -10px; display: none;}
+.content main {padding: 10px; border-bottom: 1px solid rgba(0,0,0,0.12);}
+.content main .location {font-size: 18px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.content p {
+    margin: 5px 0;
+    display: block;
+    display: -webkit-box;
+    height: calc(14px*1*3);
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.content footer {padding: 10px;display: flex;justify-content: space-between;font-size: 12px;}
+.content footer span {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 40%;}
