--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet"
         href="{{ url_for('static',
               filename='css/hello.css')}}" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <div id="map" class="hover"></div>
